--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<title>Map</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/main.css"/>
 	<script src="js/knockout-3.4.1.js"></script>
-	<script src="js/main.js" defer="defer"></script>
+	<script src="js/jquery-3.1.1.min.js"></script>
+	<script defer="defer" src="js/main.js"></script>
 </head>
 <body>
-	<span data-bind="text: fullText"></span>
+	<span></span>
+	<div class="map" id="map"></div>
+
+	<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoxcb6Blia9PD7RWVuvsndj5R_Xzf2hCY&callback=start" onerror="googleError()"></script>
 </body>
 </html>
