--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 	<script defer="defer" src="js/main.js"></script>
 </head>
 <body>
-	<span></span>
-	<header>
-		<input type="text" id="filterInput" data-bind="textInput: filterText" placeholder="Search for names..">
-		<ul id="filter" data-bind="foreach: filterList">
-			<li class="result" data-bind="text: title, click: $parent.resultClickHandler"><button></button></li>
-		</ul>
-	</header>
+	<input type="checkbox" id="drawer-toggle" name="drawer-toggle" data-bind="checked: isDrawed"/>
+	<label for="drawer-toggle" id="drawer-toggle-label"></label>	
+
+	<header>MoMo's Map</header>
+
+   <nav id="drawer">
+   	<input type="text" id="filterInput" data-bind="textInput: filterText" placeholder="Search for names..">
+   	<ul id="filter" data-bind="foreach: filterList">
+   		<li class="result" data-bind="text: title, click: $parent.resultClickHandler"></li>
+   	</ul>
+   </nav>
+
 	<div class="map" id="map"></div>
 	<script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoxcb6Blia9PD7RWVuvsndj5R_Xzf2hCY&callback=start" onerror="googleError()"></script>
